@@ -1,5 +1,10 @@
 2010-07-28  Andreia Gaita  <avidigal@novell.com>
 
+	* ScriptObjectHelper.cs: Add support for Byte and SByte marshalling.
+	  Fixes drt983 - ByRefStructJSToManaged Test*_Byte_* subtests
+
+2010-07-28  Andreia Gaita  <avidigal@novell.com>
+
 	* JSFriendlyMethodBinder.cs: Change the cast checks so that when the
 	  target type is "object", if the original object is a ScriptObject
 	  wrapper, the actual managed object is returned instead of the
